css/uzem.less
/* font families
  font-family: 'Pathway Gothic One', sans-serif;
  font-family: 'Ubuntu Mono', monospace;
*/

@basecolor: black;
@basepadding: 5px;

@breakpoint1: 500px;
@numberofyears: 35;
@numberoffullyears: 15;

.basefont {
  font-family: 'Ubuntu Mono', monospace;
  font-weight: 400;
  color: @basecolor;
}

.displayfont {
  font-family: 'Pathway Gothic One', sans-serif;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1;
  color: @basecolor;
}

html {
  padding: 0;
}

body {
  .basefont;
  font-size: @basepadding * 3;
  padding: 0;
  margin: 0;
}

a {
  text-decoration: underline;
  color: @basecolor;
}

header {
  text-align: left;
  position: fixed;
  width: 100%;
  display: block;
  padding-top: @basepadding * 4;
  padding-left: @basepadding * 4;
  z-index: 100;
  box-sizing: border-box;

  @media screen and (max-width: @breakpoint1) {
    text-align: center;
    position: absolute;
    padding-left: 0;
  }

  h1 {
    .displayfont;
    font-size: 35px;
    margin-bottom: 0px;
    display: inline;

    @media screen and (max-width: @breakpoint1) {
      display: block;
      font-size: 50px;
    }
  }

  h2, h3 {
    font-size: @basepadding * 3;
    margin-left: @basepadding * 2;
    display: inline;
    font-weight: 400;

    @media screen and (max-width: @breakpoint1) {
      margin-left: 0;
      display: block;
    }
  }

  h3 {
    float: right;
    margin-right: @basepadding * 4;

    @media screen and (max-width: @breakpoint1) {
      margin-right: 0;
      float: none;
    }
  }

}

timeline {
  width: 100vw;
  height: 100vh;
  display: block;
  bottom: 0vh;
  position: fixed;
  overflow: scroll;

  @media screen and (max-width: @breakpoint1) {
    height: (100vh * @numberoffullyears) + (50vh * (@numberofyears - @numberoffullyears + 1));
    top: 30vh;
    position: absolute;
    overflow: visible;
  }

  .line {
    display: block;
    width: (100vw * @numberoffullyears) + (50vw * (@numberofyears - @numberoffullyears + 1));
    background: @basecolor;
    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%, rgba(0,0,0,0) 100%);
    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%,rgba(0,0,0,0) 100%);
    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%,rgba(0,0,0,0) 100%);
    height: 0.5vh;
    position: absolute;
    top: 49.75vh;

    @media screen and (max-width: @breakpoint1) {
      width: 1vw;
      height: (100vh * @numberoffullyears) + (50vh * (@numberofyears - @numberoffullyears + 1));
      left: 49.5vw;
      top: 0;
      background: @basecolor;
      background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%, rgba(0,0,0,0) 100%);
      background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%,rgba(0,0,0,0) 100%);
      background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%,rgba(0,0,0,0) 100%);
    }
  }

  .yearmarkers {
    position: absolute;
    top: 0;
    left: 0;

    year {
      height: 100vh;
      width: 100vw;
      display: block;
      position: absolute;
      background: rgba(0,0,0,0.1);
      box-sizing: border-box;

      &:nth-child(odd) {
        background: rgba(0,0,0,0);
      }

      .yearloop(@counter) when (@counter > 0) {
        .yearloop((@counter - 1));
        &:nth-child(@{counter}) {
          left: 100vw * (@counter - 1);
          @media screen and (max-width: @breakpoint1) {
            top: 100vh * (@counter - 1);
            left: 0;
          }
          & when (@counter > @numberoffullyears + 1) {
            left: 100vw * @numberoffullyears + 50vw * (@counter - @numberoffullyears);
            height: 100vh;
            width: 50vw;
            @media screen and (max-width: @breakpoint1) {
              top: 100vh * @numberoffullyears + 50vw * (@counter - @numberoffullyears);
              height: 50vh;
              width: 100vw;
              left: 0;
            }
          }
          &:after {
            @actualyear: 2017 - @counter + 1;
            content: "@{actualyear}";
          }
        }
      }

      .yearloop(@numberofyears);

      &:after {
        .displayfont;
        display: block;
        position: absolute;
        bottom: @basepadding * 4;
        left: @basepadding * 4;
        font-size: 35px;

        @media screen and (max-width: @breakpoint1) {
          bottom: auto;
          top: @basepadding * 4;
          z-index: 15;
        }
      }

      reference {
        display: block;
        position: absolute;
        height: 50vh;
        width: auto;
        box-sizing: border-box;

        @media screen and (max-width: @breakpoint1) {
          width: 50vw;
          height: auto;
        }

        .monthloop(@counter) when (@counter > 0) {
          .monthloop((@counter - 1));
          &.offset-@{counter} {
            left: (100vw / 12) * (12 - @counter);
            @media screen and (max-width: @breakpoint1) {
              top: (100vh / 12) * (12 - @counter);
              left: 0;
            }
          }
        }

        .monthloop(12);

        date {

          @media screen and (max-width: @breakpoint1) {
            background: @basecolor;
            color: white;
            display: block;
            font-size: 1.5vh;
            padding-left: @basepadding * 4;
            padding-right: @basepadding * 2;
            padding-top: @basepadding / 2;
            padding-bottom: @basepadding / 2;
            box-sizing: border-box;
          }
        }

        h3 {
          .displayfont;
          font-size: 3vw;
          margin-top: 0.7em;
          margin-bottom: 0.7em;

          @media screen and (max-width: @breakpoint1) {
            font-size: 3vh;
            padding-left: @basepadding * 4;
          }
        }

        p {
          font-size: 2vw;

          @media screen and (max-width: @breakpoint1) {
            font-size: 2vh;
            padding-left: @basepadding * 4;
            padding-right: @basepadding * 2;
          }
        }

        &.odd-0 {
          @media screen and (min-width: @breakpoint1) {
            top: 50vh;
          }
          @media screen and (max-width: @breakpoint1) {
            left: 50vw;
          }
        }

        &.odd-1 {
          @media screen and (min-width: @breakpoint1) {
          }
          @media screen and (max-width: @breakpoint1) {
            text-align: right;
          }
        }

      }
    }
  }
}

